--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -4,6 +4,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/button_retour"
+        android:text="Retour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
